--- a/form/03-article.html
+++ b/form/03-article.html
@@ -184,9 +184,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <button class="button button-primary">
-                    Post my comment
-                  </button>
+                  <button class="button button-primary">Post my comment</button>
                 </div>
               </fieldset>
             </form>
