--- a/form/05-article.html
+++ b/form/05-article.html
@@ -156,6 +156,8 @@
                     <span class="form-field-container">
                       <input type="text" name="your-first-name" id="your-first-name" placeholder="e.g. Mike" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="35" autocomplete="on" accesskey="f" required />
                     </span>
+                    <p class="form-help">First name should be at least 3 characters and only contains letters</p>
+                    <i class="form-field-icon"></i>
                   </div>
                 </div>
                 <div class="form-group col-1-2">
@@ -164,6 +166,8 @@
                     <span class="form-field-container">
                       <input type="text" name="your-last-name" id="your-last-name" placeholder="e.g. Smith" pattern="[A-Za-zÀ-ž\s]{3,}" maxlength="40" autocomplete="on" accesskey="l" required />
                     </span>
+                    <p class="form-help">Last name should be at least 3 characters and only contains letters</p>
+                    <i class="form-field-icon"></i>
                   </div>
                 </div>
                 <div class="form-group col-2-3">
@@ -182,6 +186,7 @@
                         required
                       />
                     </span>
+                    <i class="form-field-icon"></i>
                   </div>
                 </div>
               </fieldset>
@@ -193,6 +198,8 @@
                     <span class="form-field-container">
                       <input type="text" name="your-title" id="your-title" placeholder="e.g. I loved that article" pattern="[A-Za-zÀ-ž\s]{4,}" maxlength="75" autocomplete="on" accesskey="t" required>
                     </span>
+                    <p class="form-help">Title should be at least 4 characters and only contains letters</p>
+                    <i class="form-field-icon"></i>
                   </div>
                 </div>
                 <div class="form-group col-2-3">
@@ -201,6 +208,8 @@
                     <span class="form-field-container">
                       <textarea name="your-comment" id="your-comment" placeholder="Write your comment here" minlength="10" accesskey="c" cols="30" rows="6" required></textarea>
                     </span>
+                    <p class="form-help">Comment should be at least 10 characters</p>
+                    <i class="form-field-icon"></i>
                   </div>
                 </div>
                 <div class="form-group">
