--- a/flexbox/100-article.html
+++ b/flexbox/100-article.html
@@ -82,7 +82,7 @@
                 finibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum accumsan euismod nunc quis viverra.
               </p>
               <figure>
-                <img src="images/article.jpg" alt="Glasses, baby converse shoes, black bag, wipes on a dresser with an open drawer" width="620" height="350" />
+                <img src="images/pic-article-001.jpg" alt="Glasses, baby converse shoes, black bag, wipes on a dresser with an open drawer" width="620" height="350" />
                 <figcaption class="img-caption">Pugnant Stoici cum Peripateticis. Prioris generis est docilitas</figcaption>
               </figure>
               <p>Quare conare, quaeso. Dici enim nihil potest verius. Primum divisit ineleganter; Suam denique cuique naturam esse ad vivendum ducem.</p>
